fix overlapping events in calendar and fix calendar being a separate scrolling viewport thing

--- a/css/components/sections/Calendar.css
+++ b/css/components/sections/Calendar.css
@@ -13,9 +13,7 @@
 
 .calendarViewport {
 	border: solid 1px white;
-	overflow-y: scroll;
 	width: 100%;
-	height: 500px;
 }
 .calendarWeek {
 	display: flex;
@@ -34,7 +32,6 @@
 }
 .calendarDayContents {
 	border-left: solid 1px white;
-	height: 1440px;
 	position: relative;
 }
 .calendarEvent {
